fix: toast z-index

--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,7 @@ span {
 }
 .Toastify__toast-container {
   text-align: center;
+  z-index: 100000000;
 }
 
 .btn {
